WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179524
WebInjectedScriptHost.cpp: warning: variable ‘scope’ set but not used
https://bugs.webkit.org/show_bug.cgi?id=179524
Summary
WebInjectedScriptHost.cpp: warning: variable ‘scope’ set but not used
Fujii Hironori
Reported
2017-11-09 23:10:37 PST
Bug 179276
has introduced a new warning message. (GTK port, Release build, trunk@224623)
> [1195/2773] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource267.cpp.o > In file included from DerivedSources/WebCore/unified-sources/UnifiedSource267.cpp:5:0: > ../../Source/WebCore/inspector/WebInjectedScriptHost.cpp: In member function ‘virtual JSC::JSValue WebCore::WebInjectedScriptHost::getInternalProperties(JSC::VM&, JSC::ExecState*, JSC::JSValue)’: > ../../Source/WebCore/inspector/WebInjectedScriptHost.cpp:165:10: warning: variable ‘scope’ set but not used [-Wunused-but-set-variable] > auto scope = DECLARE_THROW_SCOPE(vm); > ^~~~~
Attachments
Patch
(1.98 KB, patch)
2017-11-09 23:38 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-11-09 23:11:58 PST
Joseph is in
Bug 179276 Comment 21
.
Fujii Hironori
Comment 2
2017-11-09 23:12:15 PST
Joseph's patch is in
Bug 179276 Comment 21
.
Joseph Pecoraro
Comment 3
2017-11-09 23:33:41 PST
You can just land build fixes if you can verify it
Fujii Hironori
Comment 4
2017-11-09 23:38:17 PST
Created
attachment 326565
[details]
Patch
WebKit Commit Bot
Comment 5
2017-11-10 00:30:32 PST
Comment on
attachment 326565
[details]
Patch Clearing flags on attachment: 326565 Committed
r224670
: <
https://trac.webkit.org/changeset/224670
>
WebKit Commit Bot
Comment 6
2017-11-10 00:30:33 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2017-11-15 09:36:11 PST
<
rdar://problem/35562044
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug