WebInjectedScriptHost.cpp: warning: variable ‘scope’ set but not used https://bugs.webkit.org/show_bug.cgi?id=179524

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2017-11-10
Reviewed by Joseph Pecoraro.

r224606 has introduced a new compilation warning if not
ENABLE(PAYMENT_REQUEST).

No new tests (No behavior change).

* inspector/WebInjectedScriptHost.cpp:
(WebCore::WebInjectedScriptHost::getInternalProperties): Do not
define the variable 'scope' if not ENABLE(PAYMENT_REQUEST). Marked
a variable 'vm' with UNUSED_PARAM.

Canonical link: https://commits.webkit.org/195568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224670 268f45cc-cd09-0410-ab3c-d52691b4dbfc